--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,23 +5,23 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "Publications"
-    url: /publications/
+  - title: "CV"
+    url: /files/CV_Saba_Sahban.pdf
 
-  - title: "Talks"
+  - title: "Education"
+    url: /Education/
+
+  - title: "Research"
     url: /talks/    
 
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
+  - title: "Work Experience"
+    url: /teaching/
+
+  - title: "Teaching Experience"
     url: /markdown/
+    
+  - title: "Projects"
+    url: /Projects/
+        
+
+
