add research part

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
     url: /Education/
 
   - title: "Research"
-    url: /talks/    
+    url: /research/
 
   - title: "Work Experience"
     url: /teaching/
