--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,8 +17,8 @@ main:
   - title: "Work Experience"
     url: /teaching/
 
-  - title: "Teaching Experience"
-    url: /markdown/
+  - title: "TA"
+    url: /teaching/
     
   - title: "Projects"
     url: /Projects/
