add work experience

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,7 +15,7 @@ main:
     url: /research/
 
   - title: "Work Experience"
-    url: /teaching/
+    url: /work/
 
   - title: "TA"
     url: /teaching/
