make some changes

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,8 @@ author:
   avatar           : "profile1.jpeg"
   name             : "Saba Sahban"
   pronouns         : "she/her"
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Computer Engineering student at Amirkabir University of Technology
+"
   location         : "Tehran, Iran"
   employer         : "Amirkabir University of Technology"
   uri              : # URL
