fix education url

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@ main:
     url: /files/CV_Saba_Sahban.pdf
 
   - title: "Education"
-    url: /Education/
+    url: /education/
 
   - title: "Research"
     url: /research/
